another img path

--- a/src/styles/_hover.scss
+++ b/src/styles/_hover.scss
@@ -1,8 +1,8 @@
 .person:hover {
   background: #eee;
   border-radius: 10px;
-  animation-duration: 1s;
-  animation-name: scale_card;
+  transform: scale(1.32, 1.48);
+  transition: transform 1s;
   z-index: 1;
 }
 
@@ -10,15 +10,14 @@
   border-radius: 60px;
 }
 
+.person:not(:hover) {
+  transition: transform 1s;
+}
+
 .person:hover .details__extra-inf {
   visibility: visible;
 }
 
-@keyframes scale_card {
-  0% {
-    transform: scale(1.1, 1.24 );
-  }
-  100% {
-    transform: scale(1.32, 1.48);
-  }
+.person:not(:hover) .details__extra-inf {
+  visibility: hidden;
 }
