--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -49,12 +49,14 @@ body {
 }
 
 .details {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   &__name {
     font-size: 20px;
     line-height: 23px;
     color: #2f4f4f;
     text-align: center;
-    margin-bottom: 9px;
   }
   &__extra-inf {
     visibility: hidden;
