--- a/src/styles/_hover.scss
+++ b/src/styles/_hover.scss
@@ -1,7 +1,7 @@
 .person:hover {
   background: #eee;
   border-radius: 10px;
-  transform: scale(1.32, 1.48);
+  transform: scale(1.3);
   transition: transform 1s;
   z-index: 1;
 }
