--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,8 +9,9 @@ body {
 
 .people {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+  grid-template-columns: repeat(auto-fill, 230px);
   grid-gap: 10px;
+  justify-content: center;
   padding: 30px 15px 145px;
   &__person {
     box-sizing: border-box;
@@ -18,7 +19,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 10px;
+    padding: 10px 10px 0;
   }
 }
 
@@ -28,7 +29,7 @@ body {
     transition: border-radius 1s;
     width: 200px;
     height: 200px;
-    border-radius: 200px;
+    border-radius: 50%;
     margin-bottom: 8px;
   }
   &__rank {
